relay-event-normalization/src/eap/snapshots/relay_event_normalization__eap__mobile__tests__mobile_tag_cocoa.snap
---
source: relay-event-normalization/src/eap/mobile.rs
expression: attributes
---
{
  "sentry.mobile": {
    "type": "string",
    "value": "true"
  },
  "sentry.sdk.name": {
    "type": "string",
    "value": "sentry.cocoa"
  }
}
