relay-event-normalization/src/eap/snapshots/relay_event_normalization__eap__mobile__tests__outlier_keeps_start_warm.snap
---
source: relay-event-normalization/src/eap/mobile.rs
expression: attributes
---
{
  "app.vitals.start.type": {
    "type": "string",
    "value": "warm"
  },
  "app.vitals.start.value": {
    "type": "double",
    "value": 5000.0
  },
  "app.vitals.start.warm.value": {
    "type": "double",
    "value": 5000.0
  }
}
