relay-event-normalization/src/eap/snapshots/relay_event_normalization__eap__mobile__tests__outlier_keeps_ttid.snap
---
source: relay-event-normalization/src/eap/mobile.rs
expression: attributes
---
{
  "app.vitals.ttid.value": {
    "type": "double",
    "value": 5000.0
  }
}
